# fastapi-graphql

./: .template.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.graphql
app/: schema.py
app/api/: schema.py
app/common/: types.py
app/core/: config.py
app/db/: models.py  session.py
