[project]
name = "fastapi-graphql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "strawberry-graphql[cli]>=0.320.4",
    "uvicorn>=0.51.0",
]
